(lang dune 3.14)

(name latencylab)

(generate_opam_files true)

;(source
; (github username/reponame))

;(authors "Author Name")

;(maintainers "Maintainer Name")

;(license LICENSE)

;(documentation https://url/to/documentation)

(package
 (name latencylab)
 (synopsis "Latency measurements")
 (description "Measure latency and overhead of basic thread operations")
 (depends ocaml dune)
)

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
