opam-version: "2.0"
maintainer: "xen-api@lists.xen.org"
authors: [ "xen-api@lists.xen.org" ]
homepage: "https://github.com/xapi-project/xen-api"
bug-reports: "https://github.com/xapi-project/xen-api/issues"
dev-repo: "git+https://github.com/xapi-project/xen-api.git"
build-env: [[ XAPI_VERSION = "v0.0.0" ]]
build: [
  ["dune" "build" "-p" name "-j" jobs ]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml"
  "dune" {build & >= "1.4"}
  "ocaml-protoc-plugin"
]
synopsis: "Opentelemetry protocol"
description: """
Collects opentelemetry metrics and traces
"""
url {
  src: "https://github.com/xapi-project/xen-api/archive/master.tar.gz"
}
