(executable
  (modes exe)
  (name jsapi)
  (libraries
    dune-build-info
    gzip
    mustache
    rpclib.core
    rpclib.json
    uuid
    xapi_consts
    xapi-datamodel
    xapi-stdext-pervasives
    xapi_stdext_std
    xapi_stdext_unix
  )
  (preprocess (pps ppx_deriving_rpc))
)

(rule
  (alias jsapigen)
  (deps
    (:x jsapi.exe)
    (source_tree templates)
  )
  (package xapi-datamodel)
  (action (run %{x}))
)

(rule
  (alias runtest)
  (deps
    (:x jsapi.exe)
    (source_tree templates)
  )
  (package xapi-datamodel)
  (action (run %{x}))
)

