(library
  (name gencertlib)
  (wrapped true)
  (modules lib selfcert pem)
  (libraries
    angstrom
    astring
    cstruct
    forkexec
    mirage-crypto
    mirage-crypto-pk
    mirage-crypto-rng.unix
    ptime
    ptime.clock.os
    result
    rresult
    x509
    xapi-backtrace
    xapi_consts
    xapi-log
    xapi_inventory
    xapi_stdext_unix
  )
)

(executable
  (modes exe)
  (name gencert)
  (public_name gencert)
  (package xapi)
  (modules gencert)
  (libraries
    astring
    dune-build-info
    gencertlib
    x509
    xapi_inventory
    xapi_aux
    xapi-log
  )
)

(test
  (name test_lib)
  (package xapi)
  (modes exe)
  (modules test_lib test_pem)
  (libraries
    alcotest
    cstruct
    dune-build-info
    fmt
    gencertlib
    mirage-crypto
    mirage-crypto-pk
    mirage-crypto-rng.unix
    ptime
    result
    rresult
    x509
    xapi_consts
    xapi_stdext_unix
  )
  (deps
    (source_tree test_data)
  )
  (action (run %{test} --color=always))
)
