(library
  (name xapi_datamodel)
  (package xen-api-client)
  (modules datamodel datamodel_common datamodel_utils datamodel_types
    datamodel_errors datamodel_roles datamodel_vm datamodel_host
    datamodel_pool datamodel_cluster datamodel_cluster_host dm_api escaping
    datamodel_values datamodel_schema datamodel_certificate
    datamodel_diagnostics datamodel_repository datamodel_lifecycle
    datamodel_vtpm datamodel_observer datamodel_vm_group)
  (libraries
    ppx_sexp_conv.runtime-lib
    rpclib.core
    sexplib0
    sexpr
    threads
    xapi-backtrace
    xapi_consts
    xapi-schema
    xapi-stdext-date
    xapi_stdext_std
    xapi_stdext_unix
  )
  (wrapped false)
  (preprocess (per_module ((pps ppx_deriving_rpc) Datamodel_types)))
)

(executable
  (modes exe)
  (name datamodel_main)
  (modules datamodel_main dot_backend dtd_backend markdown_backend)
  (libraries
    dune-build-info
    mustache
    xapi-datamodel
    xapi_stdext_std
    xapi-stdext-pervasives
    xapi_stdext_unix
  )
)

(rule
  (alias markdowngen)
  (deps
    (:x datamodel_main.exe)
    (source_tree templates)
  )
  (package xapi)
  (action (run %{x} -closed -markdown))
)

(test
  (name schematest)
  (modes exe)
  (modules schematest)
  (libraries
    dune-build-info
    rpclib.core
    rpclib.json
    xapi_datamodel
  )
  (package xapi)
)

(executable
  (modes exe)
  (name gen_lifecycle)
  (public_name gen_lifecycle)
  (package xapi)
  (modules gen_lifecycle)
  (libraries
    dune-build-info
    xapi-datamodel
    xapi_version
  )
  (promote (until-clean))
 )

; use the binary promoted file from the source dir (not the build dir) that has
; the correct version number embedded
(rule
 (deps gen_lifecycle.exe (universe))
 (action (with-stdout-to datamodel_lifecycle.ml.generated (system %{project_root}/../../ocaml/idl/gen_lifecycle.exe))))

; 'diff' handles promotion too, see https://dune.readthedocs.io/en/stable/concepts.html?highlight=diffing#diffing-and-promotion
(rule
  (alias update-dm-lifecycle)
  (action
    (diff datamodel_lifecycle.ml datamodel_lifecycle.ml.generated)))
