(library
  (modes best)
  (name daily_license_check)
  (modules daily_license_check)
  (libraries
    httpsvr
    xapi-consts
    xapi-client
    xapi-types
    xapi-stdext-date
  )
)

(executable
  (modes exe)
  (name daily_license_check_main)
  (public_name daily-license-check)
  (package xapi)
  (modules daily_license_check_main)
  (libraries
    daily_license_check
    dune-build-info
    httpsvr
    xapi-client
    xapi-types
    xapi-stdext-date
    xapi-stdext-pervasives
  )
)

