(library
  (name daily_license_check)
  (modules daily_license_check)
  (libraries
    http_lib
    xapi-consts
    xapi_client
    xapi_types
    xapi-stdext-date
  )
)

(executable
  (modes exe)
  (name daily_license_check_main)
  (public_name daily-license-check)
  (package xapi)
  (modules daily_license_check_main)
  (libraries
    daily_license_check
    dune-build-info
    http_lib
    xapi_client
    xapi_types
    xapi-stdext-date
    xapi-stdext-pervasives
  )
)

