(executable
  (modes exe)
  (name perftest)
  (public_name perftest)
  (package xapi)
  (libraries
    dune-build-info
    http_lib
    rpclib.core
    threads.posix
    xapi_consts
    xapi-cli-protocol
    xapi-client
    xapi-datamodel
    xapi_inventory
    xapi-types
    xapi-stdext-pervasives
    xapi_stdext_std
    xapi-stdext-threads
    xapi_stdext_unix
    xml-light2
  )
)

