(executable
  (modes exe)
  (name quicktest)
  (public_name quicktestbin)
  (package xapi)
  (libraries
    alcotest
    astring
    dune-build-info
    fmt
    forkexec
    httpsvr
    mtime
    mtime.clock.os
    result
    rresult
    rpclib.core
    stunnel
    threads.posix
    unix
    uuid
    xapi-client
    xapi-consts
    xapi-datamodel
    xapi_internal
    xapi-types
    xapi-stdext-date
    xapi-stdext-pervasives
    xapi-stdext-std
    xapi-stdext-threads
    xapi-stdext-unix
    xenctrl
    xmllight2
  )
  (preprocess (per_module ((pps ppx_deriving_rpc) Quicktest_vm_lifecycle)))
)


(rule
 (alias runtest)
 (action (run ./quicktest.exe -skip-xapi -- list))
)

(rule
 (alias runtest-systemd-user)
 (deps ./quicktest.exe ../forkexecd/src/fe_main.exe)
 (action (run ./systemd_user_test.sh))
)
