(test
  (name suite_alcotest)
  (package xapi)
  (modules
    (:standard \ test_daemon_manager test_vdi_cbt test_event test_clustering
      test_cluster_host test_cluster test_pusb test_network_sriov
      test_client test_valid_ref_list suite_alcotest_server
      test_vm_placement test_vm_helpers test_repository test_repository_helpers
      test_ordered test_metastore_properties
      test_livepatch test_rpm test_updateinfo test_storage_smapiv1_wrapper test_storage_quicktest))
  (libraries
    alcotest
    angstrom
    astring
    cstruct
    dune-build-info
    fmt
    httpsvr
    ipaddr
    mirage-crypto
    pam
    result
    rpclib.core
    rpclib.json
    rresult
    tapctl
    tests_common
    threads.posix
    uuid
    xapi-backtrace
    xapi_cli_server
    xapi-consts
    xapi_database
    xapi-datamodel
    xapi-idl
    xapi-idl.storage.interface
    xapi-idl.xen.interface
    xapi-idl.xen.interface.types
    xapi_internal
    xapi-log
    xapi-stdext-date
    xapi-stdext-std
    xapi-stdext-threads
    xapi-stdext-unix
    xapi-test-utils
    xapi-types
    xapi-stdext-pervasives
    xenopsd
    xmllight2
  )
  (deps
    (source_tree test_data)
  )
)

(test
  (name suite_alcotest_server)
  (package xapi)
  (modules suite_alcotest_server test_client test_valid_ref_list)
  (libraries
    alcotest
    httpsvr
    tests_common
    xapi-client
    xapi-log
    xapi-stdext-date
    xapi-types
    xapi_internal
    xapi_internal_server
  )
)


(tests
  (names test_vm_helpers test_vm_placement test_network_sriov test_vdi_cbt
    test_clustering test_pusb test_daemon_manager test_repository test_repository_helpers
    test_livepatch test_rpm test_updateinfo)
  (package xapi)
  (modules test_vm_helpers test_vm_placement test_network_sriov test_vdi_cbt
    test_event test_clustering test_cluster_host test_cluster test_pusb
    test_daemon_manager test_repository test_repository_helpers test_livepatch test_rpm
    test_updateinfo)
  (libraries
    alcotest
    fmt
    result
    rpclib.core
    rpclib.json
    rresult
    tests_common
    threads.posix
    uuid
    xapi-client
    xapi_cli_server
    xapi-consts
    xapi_database
    xapi-idl
    xapi-idl.cluster
    xapi-idl.storage
    xapi-idl.storage.interface
    xapi-idl.xen
    xapi_internal
    xapi-test-utils
    xapi-types
    xapi-stdext-threads
    xmllight2
    yojson
  )
  (preprocess (per_module ((pps ppx_deriving_rpc) Test_cluster_host)))
)
(test
(name test_storage_smapiv1_wrapper)
(package xapi)
(modules test_storage_smapiv1_wrapper)
(libraries alcotest xapi_internal fmt xapi-idl.storage.interface xapi-idl.storage.interface.types))

(test
(name test_storage_quicktest)
(package xapi)
(modules test_storage_quicktest)
(libraries xapi_internal crowbar xapi-idl.storage.interface.types))

(test
(name test_ordered)
(package xapi)
(modules test_ordered)
(libraries crowbar fmt uuidm xapi-types xapi_metastore))

(test
(name test_metastore_properties)
(package xapi)
(modules test_metastore_properties)
 (preprocess (pps ppx_deriving_rpc))
(libraries xapi_metastore crowbar rpclib.core rresult))

(rule
  (alias runtest)
  (package xapi)
  (deps
    (:x ../xapi/xapi_main.exe)
  )
  (action (run ./check-no-xenctrl %{x}))
)

(env (_ (env-vars (XAPI_TEST 1))))
