(rule
(with-stdout-to xapi_build_info.ml
  (bash "echo let date=\\\"$(date +%Y%m%dT%H:%M:%SZ)\\\"")))

(library
  (name xapi_version)
  (package xen-api-client)
  (modules xapi_version xapi_build_info)
  ; avoid rebuilding everything when the implementation (of e.g. date) changes
  ; accessing version information is not performance critical:
  ; we don't want it inlined
  (flags (:standard -opaque))
  (libraries
    xapi_inventory
    dune-build-info
  )
  (wrapped false)
)

