(library
  (name xapi_aux)
  (modes best)
  (foreign_stubs
    (language c)
    (names rusage_thread_stubs)
  )
  (libraries
    astring
    bechamel.monotonic_clock
    cstruct
    forkexec
    ipaddr
    ipaddr.unix
    mtime
    mtime.clock
    mtime.clock.os
    tar
    threads.posix
    xapi-consts
    xapi-idl.network
    xapi-inventory
    xapi-log
    xapi-stdext-threads
    xapi-stdext-unix
    xml-light2
  )
  (wrapped false)
)

