(library
  (name xapi_cli_server)
  (modes best)
  (libraries
    astring
    base64
    http_lib
    httpsvr
    rpclib.core
    rpclib.xml
    re
    result
    rresult
    sexplib
    sexplib0
    uri
    tar
    threads.posix
    xapi-backtrace
    xapi_consts
    xapi_database
    xapi-datamodel
    xapi-log
    xapi-types
    xapi-client
    xapi-cli-protocol
    xapi_aux
    xapi-stdext-date
    xapi-stdext-pervasives
    xapi_stdext_std
    xapi-stdext-threads
    xapi_stdext_unix
    xapi-tracing
    xmlm
    xml-light2
  )
  (preprocess (pps ppx_deriving_rpc))
  (wrapped false)
)

