(rule
  (targets client.ml)
  (deps
    ../idl/ocaml_backend/gen_api_main.exe
  )
  (action
    (run %{deps} -filterinternal true -filter closed -mode client -output
      %{targets}))
)

(library
  (name xapi_client)
  (flags (:standard -w -50))
  (package xen-api-client)
  (libraries
    mtime
    mtime.clock.os
    (re_export rpclib.core)
    xapi-consts
    xapi-log
    xapi_types
    xapi-stdext-date
    xapi-stdext-pervasives
  )
  (wrapped false)
)

