(rule
  (targets client.ml)
  (deps
    ../idl/ocaml_backend/gen_api_main.exe
  )
  (action
    (run %{deps} -filterinternal true -filter closed -mode client -output
      %{targets}))
)

(library
  (name xapi_client)
  (public_name xen-api-client.client)
  (flags (:standard -w -50))
  (libraries
    mtime
    mtime.clock.os
    (re_export rpclib.core)
    xapi-consts
    xapi-log
    xapi-types
    xapi-stdext-date
    xapi-stdext-pervasives
  )
  (wrapped false)
)

; backward compat
(library
  (public_name xapi-client)
  (modules)
  (name xapi_client_compat)
  (libraries (re_export xen-api-client.client))
  (wrapped false)
)

