(executable
  (name main)
  (libraries
    
    xapi-idl
    xapi-idl.storage
    xapi-idl.storage.interface
    re
    re.str
    rpclib.core
    rpclib.json
    cmdliner
    threads
  )
  (preprocess (pps ppx_deriving_rpc))
)
(install
 (package xapi)
 (section sbin)
 (files (main.exe as sm-cli)))
