(rule
  (targets aPI.ml)
  (deps
    ../idl/ocaml_backend/gen_api_main.exe
  )
  (action
    (run %{deps} -filterinternal true -filter closed -mode api -output
      %{targets}))
)

(library
  (name xapi_types)
  (flags (:standard -w -33))
  (package xen-api-client)
  (libraries
    astring
    rpclib.core
    rpclib.json
    rpclib.xml
    uuid
    xapi-consts
    xapi-stdext-date
    xapi-stdext-unix
    xapi-idl
  )
  (wrapped false)
  (preprocess (per_module ((pps ppx_deriving_rpc) API Event_types Features SecretString)))
)

