(executable
  (modes exe)
  (name newcli)
  (public_name xe)
  (package xe)
  (libraries
    astring
    dune-build-info
    fpath
    safe-resources
    stunnel
    threads
    tracing
    uri
    yojson
    xapi-backtrace
    xapi-cli-protocol
    xapi-stdext-pervasives
    xapi_stdext_std
    xapi_stdext_unix
  )
)

