(executable
  (modes exe)
  (name newcli)
  (public_name xe)
  (package xe)
  (libraries
    astring
    
    fpath
    safe_resources
    stunnel
    threads
    xapi_tracing
    uri
    yojson
    xapi-backtrace
    xapi_cli_protocol
    xapi-stdext-pervasives
    xapi_stdext_std
    xapi-stdext-unix
  )
)

