(library
  (name certificate_check)
  (modules certificate_check)
  (libraries
    astring
    xapi-expiry-alerts
    xapi_client
    xapi-consts
    xapi_types
    xapi-stdext-date
  )
)

(executable
  (modes exe)
  (name certificate_check_main)
  (public_name alert-certificate-check)
  (package xapi)
  (modules certificate_check_main)
  (libraries
    certificate_check
    dune-build-info
    http_lib
    xapi_client
    xapi_types
    xapi-stdext-pervasives
  )
)

