; Conventions:
;
;   *  cannot depend on 'xapi_database' or 'xapi_internal': we may want to use the
;   metastore as a backend for XAPI's database in the future
;
;   * libraries that are only used by executables and tests have no
;   'public_name', and are part of the 'xapi' package
;
;   * should not be part of xapi-types because xapi-client also depends on that

(library
  (name xapi_metastore)
  (modes best)
  (package xapi)
  (libraries astring base64 forkexec (re_export fmt) fpath ipaddr rresult
             mtime
             (re_export uri) uuidm rpclib.core
             (re_export result) rpclib.json xapi-stdext-unix)
  (preprocess (per_module ((pps ppx_deriving_rpc) Serialization Config_field Config)))
)

(documentation
  (package xapi)
)
