(library
 (name forkexec)
 (package xapi)
 (wrapped false)
 (libraries
   astring
   fd-send-recv
   rpclib.core
   rpclib.json
   rpclib.xml
   uuid
   xapi-backtrace
   xapi-log
   xapi-stdext-pervasives
   xapi_stdext_unix
   xapi-tracing
 )
 (preprocess (per_module ((pps ppx_deriving_rpc) Fe))))
