(library
 (name forkexec)
 (package xen-api-client)
 (wrapped false)
 (libraries
   astring
   fd-send-recv
   rpclib.core
   rpclib.json
   rpclib.xml
   uuid
   xapi-backtrace
   xapi-log
   xapi-stdext-pervasives
   xapi-stdext-unix
   xapi_tracing
 )
 (preprocess (per_module ((pps ppx_deriving_rpc) Fe))))
