(library
  (name clock)
  (public_name clock)
  (modules date timer)
  (libraries
    astring
    fmt
    mtime
    mtime.clock.os
    ptime
    ptime.clock.os
  )
)

(tests
  (names test_date test_timer)
  (package clock)
  (modules test_date test_timer)
  (libraries alcotest clock fmt mtime ptime qcheck-core qcheck-core.runner)
)
