(library
  (name clock)
  (package xapi)
  (modules date timer)
  (libraries
    astring
    fmt
    (re_export mtime)
    mtime.clock.os
    (re_export ptime)
    ptime.clock.os
  )
)

(tests
  (names test_date test_timer)
  (package xapi)
  (modules test_date test_timer)
  (libraries alcotest clock fmt mtime mtime.clock.os ptime qcheck-core qcheck-core.runner)
)
