(library
  (name httpsvr)
  (modes best)
  (wrapped false)
  (modules (:standard \ http_test radix_tree_test test_client test_server))
  (preprocess (pps ppx_deriving_rpc))
  (libraries
    astring
    base64
    mtime
    mtime.clock.os
    polly
    rpclib.core
    rpclib.json
    rpclib.xml
    safe_resources
    sha
    stunnel
    threads.posix
    uuid
    xapi-backtrace
    xapi-consts.xapi_version
    xapi-idl.updates
    xapi-log
    xapi-stdext-date
    xapi-stdext-pervasives
    xapi-stdext-threads
    xapi-stdext-unix
    xml-light2
  )
)

(executable
  (modes exe)
  (name http_test)
  (modules http_test)
  (libraries
    dune-build-info
    httpsvr
    ounit2
  )
)

(test
  (name radix_tree_test)
  (modules radix_tree_test)
  (package xapi)
  (libraries
    dune-build-info
    httpsvr
  )
)

(executable
  (modes exe)
  (name test_client)
  (modules test_client)
  (libraries
    dune-build-info
    httpsvr
    ounit2
    safe-resources
    stunnel
    threads.posix
    xapi-stdext-pervasives
    xapi-stdext-unix
  )
)

(executable
  (modes exe)
  (name test_server)
  (modules test_server)
  (libraries
    dune-build-info
    httpsvr
    ounit2
    safe-resources
    threads.posix
    xapi-stdext-threads
    xapi-stdext-unix
  )
)

(rule
  (alias runtest)
  (package xapi)
  (deps
    (:x http_test.exe)
  )
  (action (run %{x} -runner sequential -verbose true))
)

(rule
  (alias runtest)
  (package xapi)
  (deps
    test_client.exe
    test_server.exe
    client_server_test.sh
  )
  (action (run bash client_server_test.sh))
)

