(menhir (modules sExprParser))

(ocamllex sExprLexer)

(library
  (name sexpr)
  (package xapi)
  (wrapped false)
  (modules (:standard \ sexprpp))
  (libraries
    astring
    threads.posix
    xapi-stdext-threads
  )
)

(executable
  (modes exe)
  (name sexprpp)
  (modules sexprpp)
  (libraries
    sexpr
  )
)
