(library
 (name tracing)
 (modules tracing)
 (libraries ambient-context.unix opentelemetry re uri xapi-log xapi-stdext-threads threads.posix)
 (public_name xapi-tracing))

(library
 (name tracing_export)
 (modules tracing_export)
 (public_name xapi-tracing-export)
 (libraries
  cohttp
  cohttp-posix
  opentelemetry
  opentelemetry.proto
  pbrt
  ptime
  ptime.clock.os
  rpclib.core
  rpclib.json
  result
  rresult
  tracing
  threads.posix
  uri
  xapi-log
  xapi-open-uri
  xapi-stdext-threads
  xapi-stdext-unix
  zstd)
 (preprocess
  (pps ppx_deriving_rpc)))

(test
 (name test_tracing)
 (modules test_tracing)
 (package xapi-tracing)
 (libraries tracing alcotest fmt uuid xapi-log))
